--- a/group-project-app/src/index.html
+++ b/group-project-app/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Group Project App</title>
 </head>
-<body>
+<body class="bg-[#1c1e22]">
   <app-root></app-root> <!-- Asegúrate de que este elemento exista -->
 </body>
 </html>
